[package]
name = "falcon_capstone"
version = "0.4.0"
authors = ["Marco Milanese <marcomilanese7@gmail.com>", "Alex Eubanks <endeavor@rainbowsandpwnies.com>"]
homepage = "https://github.com/falconre/falcon_capstone"
repository = "https://github.com/falconre/falcon_capstone"
description = "Capstone bindings in rust"
readme = "README.md"
license = "LGPL-3.0"
build = "build.rs"

[lib]
name = "falcon_capstone"

[dependencies]
libc = "0.2"

[features]
static = []
capstone4 = []

[build-dependencies]
bindgen = "0.51.0"
