[package]
name = "falcon_capstone"
version = "0.5.2"
authors = ["Marco Milanese <marcomilanese7@gmail.com>", "Alex Eubanks <endeavor@rainbowsandpwnies.com>"]
homepage = "https://github.com/falconre/falcon_capstone"
repository = "https://github.com/falconre/falcon_capstone"
description = "Capstone bindings in rust"
readme = "README.md"
license = "LGPL-3.0"
build = "build.rs"
edition = "2021"

[lib]
name = "falcon_capstone"

[dependencies]
libc = "0.2"

[features]
default = ["capstone4"]
static = []
vendored = []
capstone4 = []

[build-dependencies]
bindgen = { version = "0.65", features = [ "logging", "runtime", "which-rustfmt" ] }
cmake = "0.1"
fs_extra = "1.2"
